# browser-history-merger

./: CHANGELOG.md  README.md  pyproject.toml
src/browser_history_merger/: __init__.py  __main__.py
