[project]
name = "browser-history-merger"
version = "0.1.0"
description = "Simple tool to merge browser histories into a single database"
authors = [
    { name = "qwjyh", email = "urataw421@gmail.com" }
]
dependencies = []
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">= 3.8"

[project.scripts]
"browser-history-merger" = "browser_history_merger:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/browser_history_merger"]
